# cp-setup

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cc
snippets/: template.cc
snippets/data-structures/: custom-hash.md  pbds.md  priority-queue.md  sparse-table.md  trie.md
snippets/math/: gcd.md  modpow.md  sieve.md
snippets/misc/: binary-search.md
